fixed the height toggle for light mode and dark mode

--- a/css/design.css
+++ b/css/design.css
@@ -40,7 +40,7 @@ a {
 .header ul a {
     display: inline-block;
     text-decoration: none;
-    padding: 15px;
+    padding: 12px 20px;
 }
 
 .header ul a:hover {
